# wallatagger

./: .env.example  DEV_NOTES.md  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
pipenv_files/: Pipfile  pyproject.toml  requirements.txt
src/wallatagger/: __init__.py  class.py  exceptions.py  wallatagger.py
tests/: docker-compose.yml  docker_test_runner.sh  test_tags.py
tests/data/db/: wallabag.sqlite
tests/fixtures/: site-credentials-secret-key.txt  wired.com.txt
tests/fixtures/testdb/: wallabag.sqlite
