[project]
name = "wallatagger"
version = "0.1.0"
description = "Tag wallabag articles by parsing content for regexp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/jivanyatra/wallatagger/"
Issues = "https://github.com/jivanyatra/wallatagger/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

